--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         crossorigin="anonymous">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.0.0/firebase.js"></script>
+        <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     
 </head>
@@ -62,9 +63,9 @@
                                 <tr>
                                     <th scope="col">Train Name</th>
                                     <th scope="col">Destination</th>
-                                    <th scope="col">Frequency</th>
-                                    <th scope="col">Next Arrival</th>
+                                    <th scope="col">Frequency(mins)</th>
                                     <th scope="col">Minutes Away</th>
+                                    <th scope="col">Next Arrival</th>
                                 </tr>
                             </thead>
                             <tbody>
